--- a/app/style.scss
+++ b/app/style.scss
@@ -1,5 +1,34 @@
+@charset "utf-8";
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
 body {
+  margin: 0px!important;
+  padding: 0px!important;
+  background-color: #2c3338;
+}
+
+.main-container {
+  padding: 0;
   margin: 0;
-  color: #5BC0BE;
-  background-color: #1C2541;
+  width: 100%;
+  max-width: none;
+  background-color: black;
+  height: 100vh;
+
+}
+
+
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
+}
+
+/* ---------- GENERAL ---------- */
+
+* {
+  box-sizing: border-box;
+
+  &:before,
+  &:after {
+    box-sizing: border-box;
+  }
+
 }
